syntax = "proto3";

package booking.v1;

option go_package = "cloud-train-booking-lab/01-simple-grpc/gen/go/booking/v1";

message CreateBookingRequest {
  string passenger = 1;
  string departure = 2;
  string destination = 3;
}

message CreateBookingResponse {
  string pnr = 1; // booking reference - passenger name record
  string status = 2;
}

service BookingService {
  rpc CreateBooking(CreateBookingRequest) returns (CreateBookingResponse);
}
